language translation moved to db, locale in url, some little fixes

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "laravelcollective/html": "^5.2",
-        "zizaco/entrust": "dev-master"
+        "zizaco/entrust": "dev-master",
+        "waavi/translation": "2.1.x"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
